@@ -1,4 +1,5 @@
 HEAD
+	+ Fixed constructor of EBox::Downloader::CGI::Base
 	+ Added option to disable Peer Verification in EBox::RESTClient
 	+ pathHTTPSSSLCertificate() always returns a list
 	+ Added one more tip to component not found page
